syntax = "proto3";

package pos;

option go_package="github.com/Andrewalifb/alpha-pos-system/sales-service";

import "google/protobuf/timestamp.proto";
import "alpha-pos-system/sales-service/api/proto/common.proto"; 

// PosCustomer
message PosCustomer {
  string customer_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
  google.protobuf.Timestamp date_of_birth = 6;
  google.protobuf.Timestamp registration_date = 7;
  string address = 8;
  string city = 9;
  string country = 10;
  string company_id = 11;
  google.protobuf.Timestamp created_at = 12;
  string created_by = 13;
  google.protobuf.Timestamp updated_at = 14;
  string updated_by = 15;
}

// Request and Response messages
message CreatePosCustomerRequest {
  PosCustomer pos_customer = 1;
  JWTPayload jwt_payload = 2;
}

message CreatePosCustomerResponse {
  PosCustomer pos_customer = 1;
}

message ReadPosCustomerRequest {
  string customer_id = 1;
  JWTPayload jwt_payload = 2;
}

message ReadPosCustomerResponse {
  PosCustomer pos_customer = 1;
}

message UpdatePosCustomerRequest {
  PosCustomer pos_customer = 1;
  JWTPayload jwt_payload = 2;
}

message UpdatePosCustomerResponse {
  PosCustomer pos_customer = 1;
}

message DeletePosCustomerRequest {
  string customer_id = 1;
  JWTPayload jwt_payload = 2;
}

message DeletePosCustomerResponse {
  bool success = 1;
}

message ReadAllPosCustomersRequest {
    JWTPayload jwt_payload = 1;
}

message ReadAllPosCustomersResponse {
  repeated PosCustomer pos_customers = 1;
}

// PosCustomerService
service PosCustomerService {
  rpc CreatePosCustomer(CreatePosCustomerRequest) returns (CreatePosCustomerResponse);
  rpc ReadPosCustomer(ReadPosCustomerRequest) returns (ReadPosCustomerResponse);
  rpc UpdatePosCustomer(UpdatePosCustomerRequest) returns (UpdatePosCustomerResponse);
  rpc DeletePosCustomer(DeletePosCustomerRequest) returns (DeletePosCustomerResponse);
  rpc ReadAllPosCustomers(ReadAllPosCustomersRequest) returns (ReadAllPosCustomersResponse);
}
